[package]
name = "transfer-hook-max-account-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.0.3"
spl-transfer-hook-interface = "0.7.0"

[dev-dependencies]
solana-program-test = "2.0.3"
solana-sdk = "2.0.3"
spl-tlv-account-resolution = "0.7.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
test-case = "3.3.1"
